@@ -1,3 +1,4 @@
 .precomp/
 /from-*
 /releases/
+*.rakucov
