@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/lizmat/from/actions/workflows/test.yml/badge.svg)](https://github.com/lizmat/from/actions)
+[![Actions Status](https://github.com/lizmat/from/actions/workflows/linux.yml/badge.svg)](https://github.com/lizmat/from/actions) [![Actions Status](https://github.com/lizmat/from/actions/workflows/macos.yml/badge.svg)](https://github.com/lizmat/from/actions) [![Actions Status](https://github.com/lizmat/from/actions/workflows/windows.yml/badge.svg)](https://github.com/lizmat/from/actions)
 
 NAME
 ====
@@ -22,7 +22,7 @@ use from <Test ! &skip>;  # import everything *except* skip
 DESCRIPTION
 ===========
 
-from is a helper module that allows you to load any given module and only import selected items from whatever that module imports. This can be helpful when there is a conflict between different modules exporting something with the same name (such as `skip` in the Raku core, and the `skip` subroutine provided by `Test`.
+The `from` distribution is a helper module that allows you to load any given module and only import selected items from whatever that module imports by default. This can be helpful when there is a conflict between different modules exporting something with the same name (such as `skip` in the Raku core, and the `skip` subroutine provided by `Test`.
 
 The first argument indicates the name of the module to be loaded. If it is the only argument, then the module will be loaded without doing **any** of its imports (which is basically the same as `need`).
 
@@ -42,7 +42,7 @@ If you like this module, or what I’m doing more generally, committing to a [sm
 COPYRIGHT AND LICENSE
 =====================
 
-Copyright 2022 Elizabeth Mattijsen
+Copyright 2022, 2025 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
