@@ -2,7 +2,7 @@ name = from
 
 [ReadmeFromPod]
 ; enabled = false
-filename = lib/from.rakumod
+filename = doc/from.rakudoc
 
 [UploadToZef]
 
@@ -10,4 +10,6 @@ filename = lib/from.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
