@@ -1,6 +1,8 @@
 Revision history for from
 
 {{$NEXT}}
+    - Add CI badge for each OS
+    - Update copyright year
 
 0.0.3  2022-08-10T10:57:57+02:00
     - Allow importing everything except: (list)
